# airball

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Basics.ipynb  Hasaan  README.md  flybys.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml
.github/workflows/: pre-commit.yml  python-publish.yml  test_examples.yml  tests.yml  version-check.yml
.github/workflows/scripts/: convert_notebook.py
airball/: __init__.py  analytic.py  constants.py  core.py  environments.py  imf.py  stars.py  tools.py  units.py
docs/: example.md  examples.md  hooks.py  index.md  requirements.txt
docs/api/: analytic.md  core.md  environments.md  imf.md  index.md  stars.md  tools.md  units.md
docs/examples/: Basics.ipynb  IMF.ipynb  _notebook_utils.py  adiabatic-tests.ipynb  basics.ipynb  getting-started.ipynb  imf.ipynb  index.md  multiple-flybys.ipynb  stellar-environments.ipynb
docs/examples/examples_data/getting-started/: my_env.se  triple.stars
docs/examples/examples_data/multiple-flybys/: concurrent-perihelia.npy  stars.stars  successive-perihelia.npy  times.npy
docs/examples/examples_data/stellar-environments/: Local_analytic_estimate.npy
docs/examples/stellar_environments/data/: Bulge_analytic_estimate.npy  Globular_analytic_estimate.npy  Globular_numerical_estimate.npy  Local_numerical_estimate.npy
examples/: Adiabatic.ipynb  Basics.ipynb  IMF.ipynb  Stellar_Environments.ipynb
examples/stellar_environments/: Bulge_analytic_estimate.npy  Bulge_numerical_estimate.npy  Core_analytic_estimate.npy  Core_numerical_estimate.npy  Globular_analytic_estimate.npy  Globular_numerical_estimate.npy  Local_analytic_estimate.npy  Local_numerical_estimate.npy  Open_analytic_estimate.npy  Open_numerical_estimate.npy
examples/stellar_environments/data/: Bulge_numerical_estimate.npy  Core_analytic_estimate.npy  Core_numerical_estimate.npy  Open_analytic_estimate.npy  Open_numerical_estimate.npy
src/airball/: __init__.py  analytic.py  constants.py  core.py  environments.py  flybys.py  imf.py  particle.py  stars.py  tools.py  units.py
src/airball.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stellar_environments/: Bulge_analytic_estimate.npy  Core_analytic_estimate.npy  Core_numerical_estimate.npy  Globular_analytic_estimate.npy  Local_numerical_estimate.npy  Open_analytic_estimate.npy  Open_numerical_estimate.npy
tests/: conftest.py  core.py  environments.py  imf.py  stars.py  test_core.py  test_environments.py  test_examples.py  test_imf.py  test_stars.py  test_tools.py  tools.py
