[project]
name = "airball"
dynamic = ["version"]
description = "A package for running and managing flybys using REBOUND."
readme = "README.md"
authors = [
    { name = "Garett Brown", email = "astro@gbrown.ca" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "rebound>=4.4.7",
    "astropy",
    "joblib",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest >=8.0",
    "pytest-cov >=6.0",
    "pre-commit >=4.0",
    "jedi-language-server>=0.45.1",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.0",
    "mkdocs-material-extensions>=1.0.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "Markdown>=3.5.1"
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
xfail_strict = "True"


[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = [
    "A",
    "AIR",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "PLR0904", # Temporarily ignore these,
    "ANN",
    "E501",
    "COM812", # Choose to ignore these
    "D107",
    "D203",
    "D213",
    "N806",
    "S404",
    "S311",
    "S603",
]

[tool.ruff.lint.pylint]
max-locals = 35
max-args = 10

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "INP001", "SLF001", "ANN201", "S101", "PLR6301"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.*/",
  "/docs/",
  "/tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airball"]

[tool.hatch.version]
path = "src/airball/__init__.py"
