[metadata]
name = airball
version = 0.0.1
author = Garett Brown
author_email = gbrown@physics.utoronto.ca
description = A package for implementing flybys in hannorein/rebound
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zyrxvo/airball/
project_urls =
    Bug Tracker = https://github.com/zyrxvo/airball/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src